hacky header fix as the menu gets too wide

--- a/assets/styles/partials/_component.nr-signin-mobile-header.scss
+++ b/assets/styles/partials/_component.nr-signin-mobile-header.scss
@@ -24,10 +24,10 @@
     padding-left:20px;
     @media #{$mobile}{
         // width: 37.5%;
-        height: 50px;
+        height: 37px;
         @include font-size(12);
         font-weight: 300;
-        line-height: 50px;
+        line-height: 37px;
         margin: 0;
         p{
             display: inline-block;
@@ -71,11 +71,11 @@
     margin-left: 20px;
     @media #{$mobile}{
         width: 29%;
-        height: 50px;
+        height: 37px;
         @include font-size(12);
         margin: 0;
         font-weight: 300;
-        line-height: 50px;
+        line-height: 37px;
     }
 }
 
@@ -87,10 +87,10 @@
 
     @media #{$mobile}{
         // width: 37.5%;
-        height: 50px;
+        height: 37px;
         @include font-size(12);
         font-weight: 300;
-        line-height: 50px;
+        line-height: 3.2;
     }
 }
 
